# LicenseGuard-MCP

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  server.py
.github/workflows/: mcp-ci.yml  release-images.yml
tests/: test_error_mapping.py  test_protocol.py  test_server_mock.py
