[project]
name = "LicenseGuard-MCP"
version = "0.1.0"
description = "A MCP server that wraps around the backend server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "mcp[cli]>=1.17.0",
    "pytest>=8.4.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]
